--- a/auth0login/static/app.css
+++ b/auth0login/static/app.css
@@ -49,7 +49,7 @@ input[type=checkbox]:focus + label:before {
   color: rgb(0, 0, 0);
 }
 .btn:hover {
-  background-color: #44C7F4;
+  background-color: #7c0000;
 }
 .btn:focus {
   outline: none !important;
